[package]
name = "endbasic-hermit"
version = "0.1.0"
edition = "2021"
authors = ["Sergio Lopez <slp@sinrega.org>"]
license = "Apache-2.0"

[target.'cfg(target_os = "hermit")'.dependencies]
hermit = { git = "https://github.com/slp/hermit-rs", branch = "rpi4b", default-features = false, features = [ ] }

[dependencies]
async-trait = "0.1.86"
bit-vec = "0.8.0"
endbasic-std = "0.11"
endbasic-repl = "0.11"
tokio = { version = "1.19", default-features = false, features = ["rt", "rt-multi-thread", "macros"] }
